scolar-core/language-component-tool/src/test/resources/cocos/languageComponents/invalid/ASPPAndEPNamesNotUnique.comp
package cocos.languageComponents.invalid;
  
language component ASPPAndEPNamesNotUnique {

  grammar mc.lang.StateChart;

  provides production AutMain for SCMain;
  provides production AutMain for SCMain;
  
  provides production AutKoerper for SCBody;
}
